deploy/kustomize/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-blog
  namespace: ucandoit
  labels:
    app: strapi-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi-blog
  template:
    metadata:
      labels:
        app: strapi-blog
    spec:
      imagePullSecrets:
        - name: docker-registry
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-volume-claim
      containers:
      - name: strapi-blog
        image: registry.ucandoit.io/strapi-blog:0.0.1
        imagePullPolicy: Always
        ports:
        - name: http-entry
          protocol: TCP
          containerPort: 1337
        livenessProbe:
          httpGet:
            path: /
            port: 1337
          initialDelaySeconds: 3
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 1337
          initialDelaySeconds: 3
          timeoutSeconds: 3
        volumeMounts:
          - name: uploads
            mountPath: '/app/public/uploads'
