deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-blog
  namespace: ucandoit
  labels:
    app: strapi-blog
spec:
  type: ClusterIP
  ports:
    - name: http-entry
      protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: strapi-blog
